Cambios enormes en la arquitectura del proyecto verificada toda la sintaxis con netBeans falta aun generar el repositorio de persona porque el servicio ya lo usa